package com.fullness.ec.config;

public class Config {
    
}
