package com.fullness.ec.entity;

import lombok.Data;

@Data
public class OrderStatus {
   private Integer orderStatusId; 
   private String orderStatusName; 
}
