package com.fullness.ec.entity;
import lombok.Data;

@Data
public class ProductCategory {
    private Integer productCategoryId;
    private String productCategoryName;
}
