package com.fullness.ec.repository;

import org.apache.ibatis.annotations.Mapper;

@Mapper
public interface CustomerRepository {
    // void insert(Customer customer);
    // Customer selectByMailAddress(String mailAddress);
    // List<Customer> selectAll();
}
