package com.fullness.ec.repository;

import org.apache.ibatis.annotations.Mapper;

@Mapper
public interface OrderDetailRepository {
   // void insert(OrderDetail orderDetail);
}
